crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_arithmetic.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [((($0.price * $0.qty) + $0.shipping) - $0.discount) AS total]
  Source (AS $0)
