crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_case_searched.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [CASE WHEN ($0.age < 18) THEN "minor" WHEN ($0.age < 65) THEN "adult" ELSE "senior" END AS category]
  Source (AS $0)
