crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_case_simple.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [CASE $0.status WHEN "active" THEN 1 WHEN "inactive" THEN 0 ELSE -(1) END AS score]
  Source (AS $0)
