crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_function_calls.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [toLower($0.name) AS lower_name, size($0.friends) AS friend_count, toString($0.age) AS age_str]
  Source (AS $0)
