crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_in_list.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0 AS n]
  Filter (($0.status IN ["active", "pending", "review"]))
    Source (AS $0)
