crates/cyrs-plan/tests/snapshots/corpus__corpus_pretty_expr_index_access.snap
---
source: crates/cyrs-plan/tests/corpus.rs
expression: pretty(&plan)
---
Project [$0.tags[0] AS first_tag]
  Source (AS $0)
